syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message AdminAccount {
  string id = 1;
  string name = 2;
  string xrp_address_hot = 3;
  string xrp_address_cold = 4;
  string password = 5;
}
